--- a/Frontend/nginx-tpl/http.conf
+++ b/Frontend/nginx-tpl/http.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location ^~ /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        alias /var/www/certbot/.well-known/acme-challenge/;
         try_files $uri =404;
     }
 
