try fix challenge

--- a/Frontend/nginx-tpl/https.conf
+++ b/Frontend/nginx-tpl/https.conf
@@ -8,8 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ^~ /.well-known/acme-challenge/ {
-        alias /var/www/certbot/.well-known/acme-challenge/;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
         try_files $uri =404;
     }
 
@@ -31,8 +31,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location ^~ /.well-known/acme-challenge/ {
-        alias /var/www/certbot/.well-known/acme-challenge/;
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
         try_files $uri =404;
     }
 
