--- a/Frontend/conf.d/http.conf
+++ b/Frontend/conf.d/http.conf
@@ -5,7 +5,7 @@ server {
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/f /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
     location ^~ /.well-known/acme-challenge/ {
