--- a/Frontend/nginx-tpl/http.conf
+++ b/Frontend/nginx-tpl/http.conf
@@ -8,8 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    location ^~ /.well-known/acme-challenge/ {
+        alias /var/www/certbot/.well-known/acme-challenge/;
         try_files $uri =404;
     }
 
@@ -17,4 +17,4 @@ server {
     location = /50x.html {
         root /usr/share/nginx/html;
     }
-}
+} 
