--- a/Frontend/nginx-tpl/https.conf
+++ b/Frontend/nginx-tpl/https.conf
@@ -8,8 +8,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    location ^~ /.well-known/acme-challenge/ {
+        alias /var/www/certbot/.well-known/acme-challenge/;
         try_files $uri =404;
     }
 
@@ -31,11 +31,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+    location ^~ /.well-known/acme-challenge/ {
+        alias /var/www/certbot/.well-known/acme-challenge/;
         try_files $uri =404;
     }
-
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
