--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,9 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        component: [frontend, backend]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,11 +34,10 @@ jobs:
 
       - name: Build Docker image
         run: |
-          cd Frontend
-          docker build --target prod -t makrotos/prophecy:latest .
-
-      - name: Tag Docker image
-        run: docker tag makrotos/prophecy:latest ${{ secrets.REGISTRY_URL }}/makrotos/prophecy:latest
+          cd ${{ matrix.component == 'frontend' && 'Frontend' || 'Backend' }}
+          docker build \
+            ${{ matrix.component == 'frontend' && '--target prod' }} \
+            -t ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-${{ matrix.component }}:latest .
 
       - name: Push Docker image
-        run: docker push ${{ secrets.REGISTRY_URL }}/makrotos/prophecy:latest
+        run: docker push ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-${{ matrix.component }}:latest
