--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
-﻿
-services:
+﻿services:
 
   frontend:
     build:
@@ -48,8 +47,47 @@ services:
       - CHOKIDAR_USEPOLLING=true
     networks:
       - Prophecy-network
+    depends_on:
+      - backend
 
+  backend:
+    build:
+      context: ./Backend
+      dockerfile: Dockerfile
+    container_name: backend-prophecy
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    environment:
+      - SERVER_PORT=8080
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USER=prophecy_user
+      - DB_PASSWORD=prophecy_password
+      - DB_NAME=prophecy_db
+      - JWT_SECRET=prophecy_jwt_secret_key_change_in_production
+      - TELEGRAM_BOT_TOKEN=123456789:ABCDEFabcdef1234567890ABCDEFabcd
+    networks:
+      - Prophecy-network
+    volumes:
+      - ./nginx/ssl:/etc/letsencrypt
+    depends_on:
+      - postgres
 
+  postgres:
+    image: postgres:16
+    container_name: postgres-prophecy
+    restart: unless-stopped
+    environment:
+      - POSTGRES_DB=prophecy_db
+      - POSTGRES_USER=prophecy_user
+      - POSTGRES_PASSWORD=prophecy_password
+    ports:
+      - "5432:5432"
+    networks:
+      - Prophecy-network
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
 networks:
   Prophecy-network:
