--- a/.github/workflows/frontend-docker.yml
+++ b/.github/workflows/frontend-docker.yml
@@ -28,6 +28,12 @@ jobs:
             image=moby/buildkit:buildx-stable-1
           buildkitd-flags: --allow-insecure-entitlement security.insecure
 
+      - name: Configure insecure registry
+        run: |
+          echo '{"insecure-registries": ["${{ secrets.REGISTRY_URL }}"]}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl reload docker
+          sleep 5
+
       - name: Login to Private Registry
         uses: docker/login-action@v3
         with:
