--- a/.github/workflows/frontend-docker.yml
+++ b/.github/workflows/frontend-docker.yml
@@ -21,14 +21,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Configure Docker daemon for insecure registry
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{
+            "insecure-registries": ["'${{ secrets.REGISTRY_URL }}'"],
+            "debug": true
+          }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+          sleep 10
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Configure insecure registry
-        run: |
-          echo '{"insecure-registries": ["${{ secrets.REGISTRY_URL }}"]}' | sudo tee /etc/docker/daemon.json
-          sudo systemctl restart docker
-          sleep 5
+        with:
+          driver-opts: |
+            image=moby/buildkit:buildx-stable-1
+          buildkitd-flags: --allow-insecure-entitlement security.insecure
 
       - name: Login to Private Registry
         uses: docker/login-action@v3
@@ -46,7 +54,8 @@ jobs:
           tags: ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-frontend:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          insecure: true # Ключевое изменение
+          insecure: true
+          allow: security.insecure
 
   test-frontend:
     runs-on: ubuntu-latest
