--- a/.github/workflows/backend-docker.yml
+++ b/.github/workflows/backend-docker.yml
@@ -21,18 +21,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Allow insecure registry
+        run: |
+          echo '{ "insecure-registries":["${{ secrets.REGISTRY_URL }}"] }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:buildx-stable-1
-          buildkitd-flags: --allow-insecure-entitlement security.insecure
-
-      - name: Configure insecure registry
-        run: |
-          echo '{"insecure-registries": ["${{ secrets.REGISTRY_URL }}"]}' | sudo tee /etc/docker/daemon.json
-          sudo systemctl restart docker
-          sleep 5
 
       - name: Login to Private Registry
         uses: docker/login-action@v3
@@ -41,16 +36,13 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Build and push Backend Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./Backend
-          push: true
-          tags: ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-backend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          insecure: true
-          allow: security.insecure
+      - name: Build Docker image
+        run: |
+          cd Backend
+          docker build -t ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-backend:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-backend:latest
 
   test-backend:
     runs-on: ubuntu-latest
@@ -61,9 +53,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Backend Docker image (test)
-        uses: docker/build-push-action@v4
-        with:
-          context: ./Backend
-          tags: prophecy-backend:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          cd Backend
+          docker build -t prophecy-backend:test .
