--- a/.github/workflows/frontend-docker.yml
+++ b/.github/workflows/frontend-docker.yml
@@ -21,22 +21,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Configure Docker daemon for insecure registry
+      - name: Allow insecure registry
         run: |
-          sudo mkdir -p /etc/docker
-          echo '{
-            "insecure-registries": ["'${{ secrets.REGISTRY_URL }}'"],
-            "debug": true
-          }' | sudo tee /etc/docker/daemon.json
+          echo '{ "insecure-registries":["${{ secrets.REGISTRY_URL }}"] }' | sudo tee /etc/docker/daemon.json
           sudo systemctl restart docker
-          sleep 10
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:buildx-stable-1
-          buildkitd-flags: --allow-insecure-entitlement security.insecure
 
       - name: Login to Private Registry
         uses: docker/login-action@v3
@@ -45,17 +36,13 @@ jobs:
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Build and push Frontend Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: ./Frontend
-          target: prod
-          push: true
-          tags: ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-frontend:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          insecure: true
-          allow: security.insecure
+      - name: Build Docker image
+        run: |
+          cd Frontend
+          docker build --target prod -t ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-frontend:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-frontend:latest
 
   test-frontend:
     runs-on: ubuntu-latest
@@ -66,10 +53,6 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build Frontend Docker image (test)
-        uses: docker/build-push-action@v4
-        with:
-          context: ./Frontend
-          target: prod
-          tags: prophecy-frontend:test
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        run: |
+          cd Frontend
+          docker build --target prod -t prophecy-frontend:test .
