--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,13 @@
       dockerfile: Dockerfile
     container_name: backend-prophecy
     restart: unless-stopped
+    pull_policy: always
     ports:
       - "8080:8080"
     environment:
       - SERVER_PORT=8080
       - DB_HOST=postgres
-      - DB_PORT=5433
+      - DB_PORT=5432
       - DB_INTERNAL_PORT=5432
       - DB_USER=prophecy_user
       - DB_PASSWORD=prophecy_password
