--- a/.github/workflows/backend-docker.yml
+++ b/.github/workflows/backend-docker.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Получаем всю историю коммитов для получения списка изменений
 
       - name: Allow insecure registry
         run: |
@@ -46,17 +48,31 @@ jobs:
       - name: Push Docker image
         run: docker push ${{ secrets.REGISTRY_URL }}/makrotos/prophecy-backend:latest
 
-  test-backend:
-    runs-on: ubuntu-latest
-    if: |
-      github.event_name == 'pull_request' &&
-      !contains(github.event.pull_request.head.sha, 'Frontend/')
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Build Backend Docker image (test)
+      - name: Get commit history
+        id: commits
         run: |
-          cd Backend
-          docker build -t prophecy-backend:test .
+          # Получаем коммиты с предыдущего пуша до текущего
+          if [ "${{ github.event.before }}" != "0000000000000000000000000000000000000000" ]; then
+            COMMITS=$(git log --oneline --no-decorate ${{ github.event.before }}..${{ github.event.after }} --format="• %s (%h)" | sed 's/"/\\"/g')
+          else
+            # Для первого коммита в репозитории или workflow_dispatch
+            COMMITS=$(git log --oneline --no-decorate -10 --format="• %s (%h)" | sed 's/"/\\"/g')
+          fi
+          
+          # Экранируем специальные символы для JSON
+          COMMITS_ESCAPED=$(echo "$COMMITS" | python3 -c "import sys,json; print(json.dumps(sys.stdin.read()))")
+          echo "commits_list<<EOF" >> $GITHUB_OUTPUT
+          echo "$COMMITS_ESCAPED" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Send Telegram notification
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT_ID }}
+          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          message: |
+            🚀 **Backend обновлён!**
+            
+            📋 **Последние коммиты:**
+            ${{ fromJSON(steps.commits.outputs.commits_list) }}
+            
